Fix spacing

--- a/_sass/main.sass
+++ b/_sass/main.sass
@@ -167,6 +167,10 @@ img
   .beer-name
     display: block
     margin-bottom: 1em
+  .beer-style,
+  .percent
+    margin: 0 .4em
+    padding: .75em 1.5em
   article
     text-align: center
   .gf
